feat(web-service-gin): rediret to /docs and better POST doc.
