# web-service-gin/docs/swagger.json
@@ -30,7 +30,7 @@
                 "tags": [
                     "albums"
                 ],
-                "summary": "gets all albums",
+                "summary": "gets one (1) album using a query.",
                 "responses": {
                     "200": {
                         "description": "Successfully fetched album.",
@@ -78,6 +78,17 @@
                     "albums"
                 ],
                 "summary": "adds a new album",
+                "parameters": [
+                    {
+                        "description": "Album object",
+                        "name": "album",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/main.album"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Successfully added album.",
